syntax = "proto3";

package com.example.user.v1;

option java_package = "com.example.user.v1";
option java_outer_classname = "UserServiceProto";
option java_multiple_files = true;

// User status enumeration - added new value
enum UserStatus {
    USER_STATUS_UNSPECIFIED = 0;
    USER_STATUS_ACTIVE = 1;
    USER_STATUS_INACTIVE = 2;
    USER_STATUS_SUSPENDED = 3;
    // INFO: Added new enum value
    USER_STATUS_PENDING_VERIFICATION = 4;
}

// Role enumeration - added new value
enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_USER = 1;
    ROLE_ADMIN = 2;
    ROLE_MODERATOR = 3;
    // INFO: Added new role
    ROLE_GUEST = 4;
}

// Address message - no changes
message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip_code = 4;
    string country = 5;
    // INFO: Added optional field
    string apartment = 6;
}

// User message - minor additions only
message User {
    string id = 1;
    string email = 2;
    string username = 3;
    string first_name = 4;
    string last_name = 5;
    int32 age = 6;
    UserStatus status = 7;
    repeated Role roles = 8;
    Address address = 9;
    map<string, string> metadata = 10;
    int64 created_at = 11;
    int64 updated_at = 12;
    // INFO: Added optional fields
    string phone_number = 13;
    bool email_verified = 14;
    string avatar_url = 15;
}

// Request message for getting a user
message GetUserRequest {
    string user_id = 1;
    bool include_metadata = 2;
    // INFO: Added optional parameter
    bool include_deleted = 3;
}

// Response message for getting a user
message GetUserResponse {
    User user = 1;
    // INFO: Added optional field
    string cache_key = 2;
}

// Request message for creating a user
message CreateUserRequest {
    string email = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    int32 age = 5;
    Address address = 6;
    // INFO: Added optional field
    string phone_number = 7;
}

// Response message for creating a user
message CreateUserResponse {
    User user = 1;
    bool success = 2;
    // INFO: Added optional field
    string confirmation_token = 3;
}

// Request message for updating a user
message UpdateUserRequest {
    string user_id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    int32 age = 5;
    Address address = 6;
    // INFO: Added optional fields
    string phone_number = 7;
    string avatar_url = 8;
}

// Response message for updating a user
message UpdateUserResponse {
    User user = 1;
    bool success = 2;
    // INFO: Added optional field
    repeated string changed_fields = 3;
}

// Request message for deleting a user
message DeleteUserRequest {
    string user_id = 1;
    // INFO: Added optional field
    bool soft_delete = 2;
}

// Response message for deleting a user
message DeleteUserResponse {
    bool success = 1;
    string message = 2;
    // INFO: Added optional field
    int64 deleted_at = 3;
}

// Request message for listing users
message ListUsersRequest {
    int32 page_size = 1;
    string page_token = 2;
    UserStatus filter_status = 3;
    // INFO: Added optional filters
    repeated Role filter_roles = 4;
    string search_query = 5;
}

// Response message for listing users
message ListUsersResponse {
    repeated User users = 1;
    string next_page_token = 2;
    int32 total_count = 3;
    // INFO: Added optional field
    bool has_more = 4;
}

// Request message for streaming user updates
message WatchUsersRequest {
    repeated string user_ids = 1;
    // INFO: Added optional filter
    UserStatus filter_status = 2;
}

// Response message for streaming user updates
message WatchUsersResponse {
    User user = 1;
    string event_type = 2;
    // INFO: Added optional field
    int64 timestamp = 3;
}

// User service definition - added new methods
service UserService {
    // Existing methods unchanged
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc WatchUsers(WatchUsersRequest) returns (stream WatchUsersResponse);

    // INFO: Added new method
    rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserResponse);

    // INFO: Added new method
    rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
}

// New request message for GetUserByEmail
message GetUserByEmailRequest {
    string email = 1;
    bool include_metadata = 2;
}

// New request message for VerifyEmail
message VerifyEmailRequest {
    string user_id = 1;
    string verification_token = 2;
}

// New response message for VerifyEmail
message VerifyEmailResponse {
    bool success = 1;
    User user = 2;
}

// Bulk operations service - added new method
service BulkUserService {
    rpc ImportUsers(stream CreateUserRequest) returns (ListUsersResponse);
    rpc SyncUsers(stream UpdateUserRequest) returns (stream UpdateUserResponse);

    // INFO: Added new method
    rpc ExportUsers(ListUsersRequest) returns (stream User);
}

// INFO: New service added
service NotificationService {
    rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
    rpc GetNotificationPreferences(GetUserRequest) returns (NotificationPreferences);
}

// New messages for NotificationService
message SendNotificationRequest {
    string user_id = 1;
    string title = 2;
    string body = 3;
    map<string, string> data = 4;
}

message SendNotificationResponse {
    bool success = 1;
    string notification_id = 2;
}

message NotificationPreferences {
    bool email_enabled = 1;
    bool push_enabled = 2;
    bool sms_enabled = 3;
}
